--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   },
   "name": "yelpcamp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
